--- a/templates/project/.env.example
+++ b/templates/project/.env.example
@@ -7,3 +7,10 @@
 # secrets from leaking out into source code control.
 #
 export ENVIRONMENT=dev
+
+# If templates are too big the CloudFormation API, they must be uploaded
+# to s3. Set this variable to the bucket you want to use.
+# export TEMPLATE_BUCKET=mytemplatebucket
+
+# You can prefix the templates in the bucket as well.
+# export TEMPLATE_PREFIX=stackr-templates
