--- a/templates/project/.env.example
+++ b/templates/project/.env.example
@@ -6,6 +6,9 @@
 # This .env file is in gitignore to help keep application
 # secrets from leaking out into source code control.
 #
+# I suggest something like https://github.com/kennethreitz/autoenv
+# to automagically set your environment when you cd into the project
+# directory.
 export ENVIRONMENT=dev
 
 # If templates are too big the CloudFormation API, they must be uploaded
